--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -48,6 +48,7 @@ import ArrowDown from "../assets/images/arrow-up.svg";
       </ul>
     </nav>
 
+    <!-- BURGERMENU -->
     <button
       id="burgermenu"
       class="lg:hidden text-[#1E293] p-10 absolute top-4 right-4"
@@ -74,7 +75,6 @@ import ArrowDown from "../assets/images/arrow-up.svg";
         </div>
       </a>
 
-      <!-- MENU -->
       <div x-data="{ showSubmenu: false, rotation: 0 }">
         <li class="text-white pl-8 py-4 decoration-solid relative">
           <ul
