--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -17,10 +17,10 @@ const variantClasses = {
     "bg-trans text-[#1E293B] hover:bg-white hover:text-[#ff1054] hover:border-2 px-3 py-2 rounded-full transition duration-100 ease-in-out border-2 border-[#1E293B] hover:border-[#ff1054]",
 
   rounded:
-    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 p-10 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-4 py-4 lg:px-[34px]  lg:py-[35px] rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054] ",
 
   rounded2:
-    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 py-6 px-7 lg:px-7 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
+    "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-5 py-4 lg:px-[38px]  lg:py-[32px] rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
 
   støtOs:
     "bg-[#ff1054] text-white hover:bg-white hover:text-[#ff1054] hover:border-2 px-20 py-2 md:px-18 lg:px-28 lg:py-2 rounded-full transition duration-100 ease-in-out border-2 border-[#ff1054]",
