--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,14 +5,10 @@ import Navbar from "../components/Navbar.astro";
 ---
 
 <div
-  class="ml-50 p-6 z-30 lg:bg-[#f6f6f6] bg-[#062A3A] py-10 lg:pr-12 lg:p-4 fixed w-full overflow-hidden lg:flex lg:flex-row justify-start items-center"
+  class="ml-50 p-6 z-30 lg:bg-[#f6f6f6] bg-[#062A3A] py-10 lg:p-4 fixed w-full overflow-hidden lg:flex lg:flex-row justify-start items-center"
 >
   <a href="#"
-    ><Image
-      src={Logo}
-      alt="PlasticChange_logo"
-      class="lg:ml-5 mr-10 w-50"
-    /></a
+    ><Image src={Logo} alt="PlasticChange_logo" class="lg:ml-5 mr-10 w-50" /></a
   >
   <Navbar />
 </div>
